--- a/Plotting_gene_expression_in_NT_and_region_subset.ipynb
+++ b/Plotting_gene_expression_in_NT_and_region_subset.ipynb
@@ -5845,7 +5845,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: create violin plot of table\n",
+        "# create violin plot of table\n",
         "\n",
         "import seaborn as sns\n",
         "\n",
